Flexbox Left Align:fix

--- a/docs/161118_flexbox-left-aligned/css/index2.scss
+++ b/docs/161118_flexbox-left-aligned/css/index2.scss
@@ -29,7 +29,7 @@
   }
 
   .box {
-    width: 30%;
+    width: 32%;
   }
 }
 
@@ -39,7 +39,7 @@
   &::before {
     content: "";
     display: block;
-    width: 28%;
+    width: 24%;
   }
 
   &::before {
@@ -47,7 +47,7 @@
   }
 
   .box {
-    width: 28%;
+    width: 24%;
   }
 }
 
